--- a/package.json
+++ b/package.json
@@ -1,10 +1,27 @@
 {
-	"name": "patternplate-getting-started",
-	"version": "1.0.0",
-  "scripts": {
-    "start": "patternplate"
+  "name": "pattern-init",
+  "description": "a patternplate project",
+  "version": "2.0.0",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sinnerschrader/patternplate.git"
   },
-  "dependencies": {
-    "patternplate": "0.17.0"
+  "scripts": {
+    "build": "npm run console build-interface",
+    "copy": "cp -rf build/build-interface docs/v$npm_package_version",
+    "release": "npm run build && npm run copy",
+    "start": "patternplate start",
+    "console": "patternplate console"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "6.14.0",
+    "babel-preset-react": "6.11.1",
+    "patternplate": "1.0.2",
+    "patternplate-transform-browserify": "1.1.0",
+    "patternplate-transform-less": "0.2.1",
+    "patternplate-transform-react": "1.1.2",
+    "patternplate-transform-react-mount": "0.1.2",
+    "patternplate-transform-react-to-markup": "1.0.1"
   }
 }
