--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "patternplate-transform-less": "0.2.2",
     "patternplate-transform-react": "1.1.2",
     "patternplate-transform-react-mount": "0.1.2",
-    "patternplate-transform-react-to-markup": "1.0.1"
+    "patternplate-transform-react-to-markup": "1.0.1",
+    "patternplate-transform-resolve-imports": "^0.1.1",
+    "patternplate-transform-resolve-includes": "^0.1.4"
+  },
+  "dependencies": {
+    "patternplate-transform-react": "^1.1.2"
   }
 }
