--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-es2015": "6.18.0",
     "babel-preset-react": "6.16.0",
     "patternplate": "1.0.7",
+    "patternplate-server": "file:local_modules/patternplate-server-1.0.7.tgz",
     "patternplate-transform-browserify": "1.1.0",
     "patternplate-transform-less": "2.0.1",
     "patternplate-transform-react": "1.1.2",
